--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
 
 
-  <container class="education">
+  <div class="container">
     <h2>Education.</h2>
-    <section>
+    <div class="item">
       <h3>Udacity</h3>
       <picture>
         <source media="(min-width: 750px)" srcset="images/udacity-1600_large_2x.jpg 2x, images/udacity-800_medium_1x.jpg" />
@@ -49,8 +49,8 @@
         <img src="images/udacity-800_medium_1x.jpg" alt="Udacity Logo" id="udacity">
       </picture>
       <p>Working on finishing the Full-Stack Developer Nano Degree!</p>
-    </section>
-    <section>
+    </div>
+    <div class="item">
       <h3>University of Colorado</h3>
       <picture>
         <source media="(min-width: 750px)" srcset="images/buffs-1600_large_2x.jpg 2x, images/buffs-800_medium_1x.jpg" />
@@ -58,8 +58,8 @@
         <img src="images/buffs-800_medium_1x.jpg" alt="University of Colorado Logo" id="cu">
       </picture>
       <p>Go Buffs!</p>
-    </section>
-    <section>
+    </div>
+    <div class="item">
       <h3>School of Hard Knocks</h3>
       <picture>
         <source media="(min-width: 750px)" srcset="images/hard_knocks-1600_large_2x.png 2x, images/hard_knocks-800_medium_1x.png" />
@@ -67,12 +67,12 @@
         <img src="images/hard_knocks-800_medium_1x.png" alt="University of Hard Knocks Logo">
       </picture>
       <p>I took night classes. Truuuu</p>
-    </section>
-  </container>
+    </div>
+  </div>
 
-  <container class="travel">
+  <div class="container">
     <h2>Travel</h2>
-    <section>
+    <div class="item">
       <h3>Ireland</h3>
       <picture>
         <source media="(min-width: 750px)" srcset="images/ireland-1600_large_2x.jpg 2x, images/ireland-800_medium_1x.jpg" />
@@ -80,8 +80,8 @@
         <img src="images/ireland-800_medium_1x.jpg" alt="Picture of sun setting through tree in Ireland">
       </picture>
       <p>It is so it is and it was so it was.</p>
-    </section>
-    <section>
+    </div>
+    <div class="item">
       <h3>Florida</h3>
       <picture>
         <source media="(min-width: 750px)" srcset="images/Florida-1600_large_2x.jpg 2x, images/Florida-800_medium_1x.jpg" />
@@ -89,8 +89,8 @@
         <img src="images/Florida-800_medium_1x.jpg" alt="Picture of sunset in Florida Keys">
       </picture>
       <p>Stay tight in the Keys!</p>
-    </section>
-    <section>
+    </div>
+    <div class="item">
       <h3>Seattle</h3>
       <picture>
         <source media="(min-width: 750px)" srcset="images/seattle-1600_large_2x.jpg 2x, images/seattle-800_medium_1x.jpg" />
@@ -98,12 +98,12 @@
         <img src="images/seattle-800_medium_1x.jpg" alt="Picture on top of Hurricane Ridge in Olympic National Park outside of Seattle">
       </picture>
       <p>Watch out for the mountain goats.</p>
-    </section>
-  </container>
+    </div>
+  </div>
 
-  <container class="fun">
+  <div class="container">
     <h2>Fun</h2>
-    <section>
+    <div class="item">
       <h3>Kiting</h3>
      <picture>
         <source media="(min-width: 750px)" srcset="images/kiting-1600_large_2x.jpg 2x, images/kiting-800_medium_1x.jpg" />
@@ -111,8 +111,8 @@
         <img src="images/kiting-800_medium_1x.jpg" alt="Picture of a bro hauling in his kite after a long day on the water.">
       </picture>
       <p>It's nuking bra!</p>
-    </section>
-    <section>
+    </div>
+    <div class="item">
       <h3>Sailing</h3>
       <picture>
         <source media="(min-width: 750px)" srcset="images/sailing-1600_large_2x.jpg 2x, images/sailing-800_medium_1x.jpg" />
@@ -120,8 +120,8 @@
         <img src="sailing-800_medium_1x.jpg" alt="Picture of a bro at the tiller of a 14 foot single hull sailboat.">
       </picture>
       <p>Ready about, hard a-lee!</p>
-    </section>
-    <section>
+    </div>
+    <div class="item">
       <h3>Equestrian</h3>
       <picture>
         <source media="(min-width: 750px)" srcset="images/equestrian-1600_large_2x.jpg 2x, images/equestrian-800_medium_1x.jpg" />
@@ -129,8 +129,8 @@
         <img src="images/equestrian-800_medium_1x.jpg" alt="Picture of a noble steed grazing infront of a barn.">
       </picture>
       <p>Talleyho!</p>
-    </section>
-  </container>
+    </div>
+  </div>
 
 
 
@@ -141,10 +141,10 @@
 
 
 
-  <div class="flourish"></div
+  <div class="flourish"></div>
 
   <br>
-  <container class='footer'>
+  <div class='footer'>
     <ul>
       <li class="zocial-facebook"></li>
       <li class="zocial-twitter"></li>
@@ -152,7 +152,7 @@
       <li class="zocial-googleplus"></li>
     </ul>
     <a href="#" title="View source for this page on GitHub" id="viewSource">View source on GitHub</a>
-  </container>
+  </div>
 
   <script>
       /*
